@@ -206,7 +206,7 @@ public class JAASLoginService extends AbstractLifeCycle implements LoginService
                             }
                             else if (callback instanceof PasswordCallback)
                             {
-                                ((PasswordCallback)callback).setPassword((char[]) credentials.toString().toCharArray());
+                                ((PasswordCallback)callback).setPassword(credentials.toString().toCharArray());
                             }
                             else if (callback instanceof ObjectCallback)
                             {
@@ -227,7 +227,7 @@ public class JAASLoginService extends AbstractLifeCycle implements LoginService
             else
             {
                 Class<?> clazz = Loader.loadClass(_callbackHandlerClass);
-                callbackHandler = (CallbackHandler)clazz.newInstance();
+                callbackHandler = (CallbackHandler)clazz.getDeclaredConstructor().newInstance();
             }
             //set up the login context
             //TODO jaspi requires we provide the Configuration parameter
